--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ thiserror = "1.0.25"
 async-trait = "0.1.56"
 aws-sdk-s3 = {version = "0.30.0", optional = true}
 aws-config = {version = "0.56.1", optional = true}
-
+mockall = "0.11.4"
 
 [features]
 default = ["s3"]
